crates/vvv-tui/src/snapshots/vvv_tui__tests__review_invalid_rename.snap
---
source: crates/vvv-tui/src/tests.rs
expression: "FrameFixture::new(&m).render()"
---
┌ Rename trait ────────────────────────────────────────────────── 3/4 selected · 3 files ┐
│ Language → Lang▏                                                                       │
└ src/lang/mod.rs:64 · name collides with an existing declaration ───────────────────────┘
┌ ? Unverified ─────────────── 1/1 · 1 file ┐┌ Conflicting changes ──────────────────────┐
│  src/other.rs                             ││name collides with an existing             │
│> ▫ 10 Language::new()                     ││declaration                                │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
└ 0/1 selected ─────────────────────────────┘│                                           │
┌ ✓ Safe ──────────────────── 1/3 · 3 files ┐│                                           │
│  src/lang/mod.rs                          ││                                           │
│  ▪ 64 pub trait Language: Send + Sync {   ││                                           │
└ 3/3 selected ─────────────────────────────┘│                                           │
 ✗ Other ───────────────────── 0/0 · 0 files └───────────────────────────────────────────┘
 rename ↓/tab sites  ctrl+u clear  typing the new name  ⏎ fix error  esc back     f1 help
