crates/vvv-tui/src/snapshots/vvv_tui__tests__scoped_wide.snap
---
source: crates/vvv-tui/src/tests.rs
expression: "FrameFixture::new(&m).render_size(120, 30)"
---
┌ vvv ~/dev/nx ────────────────────────────────────────────────────────────────────────────────────── 1 query · search ┐
│> Engine                                                                                                              │
└ f in: crates/vvv  ·  s kind: any  ·  L lang: any ────────────────────────────────────────────────────────────────────┘
┌ 2 Files ─────────────────────────────────── 1/2 · 2 hits ┐┌ source · crates/vvv/src/cli/commands/serve.rs:38 ────────┐
│> crates/vvv/src/cli/commands/serve.rs                  1 ││   33 │ // line 33                                        │
│  crates/vvv/src/cli/context.rs                         1 ││   34 │ // line 34                                        │
│                                                          ││   35 │ // line 35                                        │
├ 3 Matches · j/k ──────────────────────────────────── 1/1 ┤│   36 │ // line 36                                        │
│> 38  engine: Engine,                                     ││   37 │ // line 37                                        │
│                                                          ││   38 │     engine: Engine,                               │
│                                                          ││   39 │ // line 39                                        │
│                                                          ││   40 │ // line 40                                        │
│                                                          ││   41 │ // line 41                                        │
│                                                          ││   42 │ // line 42                                        │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          │└──────────────────────────────────────────────────────────┘
│                                                          │┌ definition · crates/vvv-engine/src/engine.rs:1 ──────────┐
│                                                          ││ pub struct Engine {                                      │
│                                                          ││     workspace: Workspace,                                │
│                                                          ││     languages: LanguageRegistry,                         │
│                                                          ││ }                                                        │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
└ [All 2] Declarations 0 Imports 0 Uses 2 ─────────────────┘└ outside location ────────────────────────────────────────┘
 search j/k move  ⏎ references  F files  f location  t category  o follow  / query  e editor  ? keys  v view
