crates/vvv-tui/src/snapshots/vvv_tui__tests__snapshot_body_focused.snap
---
source: crates/vvv-tui/src/tests.rs
expression: "FrameFixture::new(&m).render()"
---
┌ vvv ~/dev/nx ─────────────────────── 1 query · search · ctrl+g filters · ctrl+o places ┐
│> Language                                                                              │
└ workspace · all results ───────────────────────────────────────────────────────────────┘
┌ 2 Files ──────────────────── 1/3 · 4 hits ┐┌ definition · src/lang/mod.rs:64 ─── 64–67 ┐
│> src/lang/mod.rs                        1 ││ pub trait Language: Send + Sync {         │
│  src/lang/registry.rs                   1 ││     fn name(&self) -> &str;               │
│  src/lib.rs                             2 ││     fn extensions(&self) -> &[&str];      │
│                                           ││ }                                         │
├ 3 Matches · j/k ───────────────────── 1/1 ┤│                                           │
│> 64  pub trait Language: Send + Sync {    ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
└ [All 4] Decl 1 Imp 2 Use 1 ───────────────┘└───────────────────────────────────────────┘
 search ⏎ follow  / find  : line  n hit  → columns  z expand  p preview           f1 help
