crates/vvv-tui/src/snapshots/vvv_tui__tests__snapshot_body_scrolled.snap
---
source: crates/vvv-tui/src/tests.rs
expression: "FrameFixture::new(&m).render()"
---
┌ vvv ~/dev/nx ────────────────────────────────────────────────────────── Query · search ┐
│> Language                                                                              │
└ workspace · all results ───────────────────────────────────────────────────────────────┘
┌ Files ─────────────────────── 1/1 · 1 hit ┐┌ definition · large.rs:1 ─────────── 21–32 ┐
│> large.rs                               1 ││     field_19: usize,                      │
│                                           ││     field_20: usize,                      │
├ Matches ───────────────────────────── 1/1 ┤│     field_21: usize,                      │
│> 1  struct Large {                        ││     field_22: usize,                      │
│                                           ││     field_23: usize,                      │
│                                           ││     field_24: usize,                      │
│                                           ││     field_25: usize,                      │
│                                           ││     field_26: usize,                      │
│                                           ││     field_27: usize,                      │
│                                           ││     field_28: usize,                      │
│                                           ││     field_29: usize,                      │
│                                           ││ }                                         │
│                                           ││                                           │
│                                           ││                                           │
└ [All 1] Decl 1 Imp 0 Uses 0 ──────────────┘└───────────────────────────────────────────┘
 search j/k scroll  d/u page  ⏎ follow  / find  : line  n hit  → columns          f1 help
