crates/vvv-tui/src/snapshots/vvv_tui__tests__snapshot_empty_search.snap
---
source: crates/vvv-tui/src/tests.rs
expression: "FrameFixture::new(&model()).render()"
---
┌ vvv ~/dev/nx ─────────────────────── 1 query · search · ctrl+g filters · ctrl+o places ┐
│> ▏                                                                                     │
└ workspace · all results ───────────────────────────────────────────────────────────────┘
┌ 2 Files ──────────────────── 0/0 · 0 hits ┐┌ source ───────────────────────────────────┐
│ no result files                           ││                                           │
├ 3 Matches · j/k ───────────────────── 0/0 ┤│                                           │
│ Type a name or pattern to search.         ││                                           │
│ Ctrl+G filters                            ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
└ [All 0] Decl 0 Imp 0 Uses 0 ──────────────┘└───────────────────────────────────────────┘
 search ↓ results  ctrl+n ctrl+p files                                            f1 help
