crates/vvv-tui/src/snapshots/vvv_tui__tests__snapshot_help.snap
---
source: crates/vvv-tui/src/tests.rs
expression: "FrameFixture::new(&m).render()"
---
┌ Help · Search · Query ─────────────────────────────────────────────────────────────────┐
│ Search                                                                                 │
│          ↓ ⏎  results                                                                  │
│          esc  clear                                                                    │
│         bksp  erase                                                                    │
│ctrl+n ctrl+p  switch files without leaving the query                                   │
│       typing  a name, an ast-grep pattern, or filters: symbol:trait name:Foo           │
│               kind:impl_item lang:rust                                                 │
│       ctrl+o  open browsing trail and recent searches                                  │
│       ctrl+g  edit or clear filters; reset restrictions while keeping the query        │
│       ctrl+f  choose result location                                                   │
│       ctrl+s  choose declaration kind                                                  │
│       ctrl+t  choose result category                                                   │
│       ctrl+l  choose language                                                          │
│       ctrl+r  refresh search after source changes                                      │
│ Everywhere                                                                             │
│    tab s-tab  next / previous panel                                                    │
│           f1  help for the focused pane; press again to return                         │
│       ctrl+c  quit                                                                     │
└ ↑/↓ scroll · f1 / esc return ──────────────────────────────────────────────────────────┘
