crates/vvv-tui/src/snapshots/vvv_tui__tests__snapshot_history_and_confirm.snap
---
source: crates/vvv-tui/src/tests.rs
expression: "format!(\"{history}\\n\\n=== confirm ===\\n{confirm}\")"
---
┌ History ──────────────────────────────────────────────────────────────────── 2 entries ┐
└ oldest first · newest #2 · undo available ─────────────────────────────────────────────┘
┌ Entries ───────────────────────────── 2/2 ┐┌ Files ────────────────────── #2 · 0 files ┐
│  #1   rename Config → Settings · 0 files  ││ rename Config → Settings                  │
│> #2   rename Config → Settings · 0 files  ││ No files in this entry                    │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
└ just now · newest · can undo ─────────────┘└───────────────────────────────────────────┘
 history j/k move  ⏎/u undo #2  esc back  e editor  v view  tab panes             f1 help

=== confirm ===
┌ History ──────────────────────────────────────────────────────────────────── 2 entries ┐
└ oldest first · newest #2 · undo available ─────────────────────────────────────────────┘
┌ Entries ───────────────────────────── 2/2 ┐┌ Files ────────────────────── #2 · 0 files ┐
│  #1   rename Config → Settings · 0 files  ││ rename Config → Settings                  │
│> #2   rename Config → Settings · 0 files  ││ No files in this entry                    │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                        ┌───────────────────────────────────────┐                       │
│                        │↩ #2  rename Config → Settings?        │                       │
│                        └───────────────────────────────────────┘                       │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
└ just now · newest · can undo ─────────────┘└───────────────────────────────────────────┘
 history y yes  n no                                                              f1 help
