crates/vvv-tui/src/snapshots/vvv_tui__tests__snapshot_move.snap
---
source: crates/vvv-tui/src/tests.rs
expression: "FrameFixture::new(&m).render()"
---
┌ Move file ─────────────────────────────────────────────────── 4 files · 2 manual fixes ┐
│ destination: src/net/parse.rs                                                          │
└ ./src/util/parse.rs · ready to apply ──────────────────────────────────────────────────┘
┌ → Paths rewritten ─────────────────── 1/2 ┐┌ Source · src/lib.rs:1 ────────────────────┐
│  src/lib.rs                               ││ crate::util::parse::X                     │
│> → 1 crate::util::parse::X → crate::net::…││ crate::net::parse::X                      │
│  src/main.rs                              ││    1 │ use crate::util::parse::X;         │
│  → 7 crate::util::parse::{Config, X} → cr…││    2 │ // line 2                          │
│                                           ││    3 │ // line 3                          │
│                                           ││    4 │ // line 4                          │
└───────────────────────────────────────────┘│    5 │ // line 5                          │
┌ ± Structure ───────────────────────── 1/2 ┐│                                           │
│  src/util/mod.rs                          ││                                           │
│  ±   - mod parse;                         ││                                           │
└───────────────────────────────────────────┘│                                           │
┌ ! Manual fixes ────────────────────── 1/2 ┐│                                           │
│  src/net.rs                               ││                                           │
│  ! 3 crate::util::parse::Config → crate::…││                                           │
└───────────────────────────────────────────┘└ included in apply ────────────────────────┘
 move j/k move  d diff  ⏎ apply 4 files  esc back  e editor  v view  tab panes    f1 help
