crates/vvv-tui/src/snapshots/vvv_tui__tests__snapshot_move_detailed.snap
---
source: crates/vvv-tui/src/tests.rs
expression: "FrameFixture::new(&m).render()"
---
┌ 1 Move file ───────────────────────────────────────────────── 4 files · 2 manual fixes ┐
│ destination: src/net/parse.rs                                                          │
└ ./src/util/parse.rs · ready to apply ──────────────────────────────────────────────────┘
┌ 2 → Paths rewritten ───────────────── 1/2 ┐┌ 5 Source · src/lib.rs:1 ──────────────────┐
│  src/lib.rs                               ││ crate::util::parse::X                     │
│> → 1. 1 crate::util::parse::X → crate::ne…││ crate::net::parse::X                      │
│  src/main.rs                              ││    1 │ use crate::util::parse::X;         │
│  → 2. 7 crate::util::parse::{Config, X} →…││    2 │ // line 2                          │
│                                           ││    3 │ // line 3                          │
│                                           ││    4 │ // line 4                          │
└───────────────────────────────────────────┘│    5 │ // line 5                          │
┌ 3 ± Structure ─────────────────────── 1/2 ┐│                                           │
│  src/util/mod.rs                          ││                                           │
│  ± 1.   - mod parse;                      ││                                           │
└───────────────────────────────────────────┘│                                           │
┌ 4 ! Manual fixes ──────────────────── 1/2 ┐│                                           │
│  src/net.rs                               ││                                           │
│  ! 1. 3 crate::util::parse::Config → crat…││                                           │
└───────────────────────────────────────────┘└ included in apply ────────────────────────┘
 move d diff  ⏎ apply 4 files  esc back  j/k move  e editor  ? keys  v view       f1 help
